Avalara Fullqa/src/CloudCraze/objects/E_PageSection__c.object
<CustomObject>
    <description>Holds the page sections - entities which comprise a page in the application.</description>
    <fields>
        <fullName>DisplayStyle__c</fullName>
        <label>Display Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2-Column Grid</fullName>
                </value>
                <value>
                    <fullName>3-Column Grid</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayType__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tab</fullName>
                </value>
                <value>
                    <fullName>Widget</fullName>
                </value>
                <value>
                    <fullName>Scroller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <description>If a tab, all sections with the same group will be in the same tab group.</description>
        <label>Grouping</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left Column</fullName>
                </value>
                <value>
                    <fullName>Main Content</fullName>
                </value>
                <value>
                    <fullName>Right Column</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PageName__c</fullName>
        <description>Name of the page to which this section corresponds</description>
        <label>Page Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cart</fullName>
                </value>
                <value>
                    <fullName>CheckoutNew</fullName>
                </value>
                <value>
                    <fullName>HomePage</fullName>
                </value>
                <value>
                    <fullName>MyAccount</fullName>
                </value>
                <value>
                    <fullName>OrderConfirmation</fullName>
                </value>
                <value>
                    <fullName>OrderView</fullName>
                </value>
                <value>
                    <fullName>ProductDetails</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PageSectionId__c</fullName>
        <externalId>true</externalId>
        <label>PageSectionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionFilterOther__c</fullName>
        <label>Section Filter Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionFilter__c</fullName>
        <label>Section Filter</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>SectionName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Assembly Guides</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>CrossSell</fullName>
                </value>
                <value>
                    <fullName>Datasheets</fullName>
                </value>
                <value>
                    <fullName>Flash Files</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Owner&apos;s Manuals</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Safety Documents</fullName>
                </value>
                <value>
                    <fullName>Sales Brochures</fullName>
                </value>
                <value>
                    <fullName>UpSell</fullName>
                </value>
                <value>
                    <fullName>Complementary</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SectionName__c</fullName>
        <label>Section Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PageName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Guides</fullName>
                </value>
                <value>
                    <fullName>GuidesSelected</fullName>
                </value>
                <value>
                    <fullName>IncludedItems</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
                <value>
                    <fullName>Sellers</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Specs-All</fullName>
                </value>
                <value>
                    <fullName>Specs-Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Display order</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storefront__c</fullName>
        <description>Storefront name. A storefront named &quot;Global&quot; applies to all store fronts. The CloudCraze first returns records with matched storefront name, and pageName. If no match found, return records with storefront named &quot;Global&quot; and matched pageName.</description>
        <externalId>true</externalId>
        <label>Storefront</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CC Page Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DisplayStyle__c</columns>
        <columns>DisplayType__c</columns>
        <columns>Grouping__c</columns>
        <columns>Location__c</columns>
        <columns>SectionName__c</columns>
        <columns>SectionFilter__c</columns>
        <columns>SectionFilterOther__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CC Page Section Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Page Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>